# kelly_indexer

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
data/input/json/SOAP_TXT/SOPS_MAX/: A-20-01-09-03-01.json  A-20-02-22-01-01.json  A-20-02-22-03-01.json  A-20-03-23-01-01.json  A-20-03-23-02-01.json  A-20-03-23-03-01.json  A-20-03-25-01-01.json  A-20-03-25-01-02.json  A-20-03-25-01-03.json  A-20-03-25-01-04.json  A-20-03-25-02-02.json  A-20-03-25-02-03.json  A-20-03-25-03-01.json  A-20-03-25-03-12.json  A-20-03-25-03-13.json  A-20-03-25-03-14.json  A-20-03-25-03-15.json  A-20-03-25-03-16.json  A-20-03-25-03-17.json  A-20-03-25-03-18.json  A-20-03-25-03-19.json  A-20-03-25-03-20.json  A-20-03-25-03-21.json  A-20-03-25-03-22.json  A-20-03-25-03-23.json  A-20-03-25-03-24.json  A-20-03-25-03-25.json  A-20-03-25-03-26.json  A-20-03-25-03-27.json  A-20-03-25-03-28.json  A-20-03-25-03-29.json  A-20-03-25-03-30.json  A-20-03-25-04-01.json  A-20-03-25-05-02.json  A-20-03-25-05-03.json  A-20-03-25-05-04.json  A-20-03-25-05-05.json  A-20-03-25-05-06.json  A-20-03-25-05-07.json  Descarga_Web_Retenciones.json
data/input/json/SOAP_TXT/SOPS_MAX/Administración/: A-20-02-14-01-01.json  A-20-02-14-02-01.json  A-20-02-14-03-01.json  A-20-02-14-03-02.json  A-20-02-14-03-03.json  A-20-02-14-03-04.json
data/input/json/SOAP_TXT/SOPS_MAX/Administración_4.0/: A-20-03-26-01-01.json  A-20-03-26-01-02.json  A-20-03-26-01-03.json  A-20-03-26-01-04.json  A-20-03-26-01-05.json  A-20-03-26-01-06.json  A-20-03-26-01-07.json  A-20-03-26-01-08.json  A-20-03-26-01-09.json  A-20-03-26-01-10.json  A-20-03-26-01-11.json  A-20-03-26-01-12.json
data/input/json/SOAP_TXT/SOPS_MAX/Carga_Sistema/: A-20-02-10-01-01.json  A-20-02-10-02-01.json  A-20-02-10-03-01.json
data/input/json/SOAP_TXT/SOPS_MAX/Catalogo_de_Empresas/: A-20-02-22-01-01.json  A-20-02-22-02-01.json  A-20-02-22-02-02.json  A-20-02-22-03-01.json  A-20-03-22-02-03.json  A-20-03-23-01-01.json
data/input/json/SOAP_TXT/SOPS_MAX/Configurar_sistema/: A-20-03-23-02-01.json  A-20-03-23-03-01.json  A-20-03-23-04-01.json
data/input/json/SOAP_TXT/SOPS_MEC/: D-20-01-02-01-01.json  D-20-01-02-02-01.json  D-20-01-02-03-02.json  D-20-01-03-01-02.json  D-20-01-08-01-01.json  D-20-01-09-01-01.json  D-20-01-09-02-01.json  D-20-01-09-02-02.json  D-20-01-09-04-01.json  D-20-01-09-04-02.json  D-20-01-09-04-03.json  D-20-01-09-07-01.json  D-20-02-04-01-01.json  D-20-02-05-01-01.json  D-20-02-06-03-02.json  D-20-03-01-01-01.json  D-20-03-01-01-02.json  D-20-03-01-01-03.json  D-20-03-01-01-04.json  D-20-03-01-01-05.json  D-20-03-01-01-06.json  D-20-03-01-01-07.json  D-20-03-01-01-08.json  D-20-03-02-01-01.json  D-20-03-02-01-02.json  D-20-03-02-01-03.json  D-20-03-03-01-01.json  D-20-03-03-01-04.json  D-20-03-08-02-01.json  D-20-03-08-03-01.json  D-20-03-08-04-01.json  D-20-03-10-01-01.json  D-20-03-10-02-01.json  D-20-03-10-03-01.json  D-20-03-10-04-01.json  D-20-03-10-05-01.json  D-20-03-10-06-01.json  D-20-03-11-01-01.json  D-20-03-11-02-01.json  D-20-03-11-03-01.json  (+4 more)
data/output/json/: example_soap.json
data/output/json/SOAP_TXT/SOPS_MAX/: A-20-01-09-03-01.json  A-20-02-22-01-01.json  A-20-02-22-03-01.json  A-20-03-23-01-01.json  A-20-03-25-01-03.json  A-20-03-25-02-02.json  A-20-03-25-02-03.json  A-20-03-25-03-01.json  A-20-03-25-03-12.json  A-20-03-25-03-13.json  A-20-03-25-03-14.json  A-20-03-25-03-15.json  A-20-03-25-03-16.json  A-20-03-25-03-19.json  A-20-03-25-03-20.json  A-20-03-25-03-22.json  A-20-03-25-03-23.json  A-20-03-25-03-26.json  A-20-03-25-03-29.json  A-20-03-25-03-30.json  A-20-03-25-04-01.json  A-20-03-25-05-03.json  A-20-03-25-05-04.json  A-20-03-25-05-06.json  A-20-03-25-05-07.json
data/output/json/SOAP_TXT/SOPS_MEC/: D-20-01-02-01-01.json  D-20-01-02-02-01.json  D-20-01-08-01-01.json  D-20-01-09-02-01.json  D-20-01-09-04-02.json  D-20-01-09-04-03.json  D-20-02-04-01-01.json  D-20-03-01-01-02.json  D-20-03-01-01-03.json  D-20-03-01-01-04.json  D-20-03-01-01-06.json  D-20-03-01-01-08.json  D-20-03-02-01-01.json  D-20-03-02-01-03.json  D-20-03-03-01-01.json  D-20-03-08-02-01.json  D-20-03-10-01-01.json  D-20-03-10-02-01.json  D-20-03-10-04-01.json  D-20-03-10-05-01.json  D-20-03-10-06-01.json  D-20-03-11-01-01.json  D-20-03-11-02-01.json  D-20-03-11-03-01.json  D-20-03-11-06-01.json  D-20-03-11-07-01.json
scripts/indexer/: index_qdrant.py  index_state_qdrant.json
src/kelly_indexer/: config.py  data_loader.py  embeddings.py  qdrant_ops.py  state_manager.py  text_chunker.py
src/kelly_indexer/utils/: logging_setup.py
tests/: test_config.py  test_data_loader.py  test_state_manager.py
(+309 files in other folders)
